// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot for a new list 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="name"
      >
        Name
      </label>
      <div
        class="control"
      >
        <input
          data-testid="name"
          name="name"
          type="text"
          value=""
        />
      </div>
      <p
        class="help is-danger"
        data-testid="nameErrors"
      />
    </div>
    <div
      class="field is-grouped"
    >
      <p
        class="control"
      >
        <button
          class="button"
          data-testid="submit"
          type="submit"
        >
          CREATE
        </button>
      </p>
      <p
        class="control"
      >
        <button
          class="button"
          data-testid="cancel"
          type="button"
        >
          CANCEL
        </button>
      </p>
    </div>
  </form>
</DocumentFragment>
`;

exports[`should match the snapshot for an existing list 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <div
      class="field"
    >
      <label
        class="label"
        for="name"
      >
        Name
      </label>
      <div
        class="control"
      >
        <input
          data-testid="name"
          name="name"
          type="text"
          value="list name"
        />
      </div>
      <p
        class="help is-danger"
        data-testid="nameErrors"
      />
    </div>
    <table
      class="table"
    >
      <thead>
        <tr>
          <td>
            Title
          </td>
          <td>
            <button
              class="button is-small"
              data-testid="addNew"
              type="button"
            >
              <span
                class="icon is-small"
              >
                <i
                  class="fas fa-plus"
                />
              </span>
            </button>
          </td>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <a
              class="has-text-black"
              data-testid="editListItem5"
              href="/lists/2/items/5/edit"
            >
              item title
            </a>
          </td>
          <td>
            <center>
              <a
                class="has-text-black"
                data-testid="deleteListItem5"
                href="/lists/2/items/5/delete"
              >
                <span
                  class="icon is-small"
                >
                  <i
                    class="fas fa-trash-alt fa-xs"
                  />
                </span>
              </a>
            </center>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="field is-grouped"
    >
      <p
        class="control"
      >
        <button
          class="button"
          data-testid="submit"
          type="submit"
        >
          SAVE
        </button>
      </p>
      <p
        class="control"
      >
        <button
          class="button"
          data-testid="cancel"
          type="button"
        >
          CANCEL
        </button>
      </p>
      <p
        class="control"
      >
        <button
          class="button is-danger"
          data-testid="delete"
          type="button"
        >
          DELETE
        </button>
      </p>
    </div>
  </form>
</DocumentFragment>
`;
